@@ -1,5 +1,5 @@
 /* VetoableChangeSupport.java -- support to manage vetoable change listeners
-   Copyright (C) 1998, 1999, 2000, 2002, 2005, 2006,  
+   Copyright (C) 1998, 1999, 2000, 2002, 2005, 2006,
    Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
@@ -349,8 +349,8 @@ public class VetoableChangeSupport implements Serializable
   {
     if (oldVal != newVal)
       fireVetoableChange(new PropertyChangeEvent(source, propertyName,
-                                                 new Integer(oldVal),
-                                                 new Integer(newVal)));
+                                                 Integer.valueOf(oldVal),
+                                                 Integer.valueOf(newVal)));
   }
 
   /**
