@@ -7,7 +7,7 @@ GNU Classpath is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2, or (at your option)
 any later version.
- 
+
 GNU Classpath is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
@@ -66,7 +66,7 @@ import java.util.HashMap;
  * case with French.  The modifier applies to all rules <b>after</b>
  * the modifier but before the next primary sequence. If placed at the end
  * of the sequence if applies to all unknown accented character.
- * The relational operators specify how the text 
+ * The relational operators specify how the text
  * argument relates to the previous term.  The relation characters have
  * the following meanings:
  * <ul>
@@ -81,9 +81,9 @@ import java.util.HashMap;
  * <p>
  * As for the text argument itself, this is any sequence of Unicode
  * characters not in the following ranges: 0x0009-0x000D, 0x0020-0x002F,
- * 0x003A-0x0040, 0x005B-0x0060, and 0x007B-0x007E. If these characters are 
- * desired, they must be enclosed in single quotes.  If any whitespace is 
- * encountered, it is ignored.  (For example, "a b" is equal to "ab").  
+ * 0x003A-0x0040, 0x005B-0x0060, and 0x007B-0x007E. If these characters are
+ * desired, they must be enclosed in single quotes.  If any whitespace is
+ * encountered, it is ignored.  (For example, "a b" is equal to "ab").
  * <p>
  * The reset operation inserts the following rule at the point where the
  * text argument to it exists in the previously declared rule string.  This
@@ -91,7 +91,7 @@ import java.util.HashMap;
  * them in a reset sequence at the end.  Note that the text argument, or
  * at least the first character of it, must be present somewhere in the
  * previously declared rules in order to be inserted properly.  If this
- * is not satisfied, a <code>ParseException</code> will be thrown. 
+ * is not satisfied, a <code>ParseException</code> will be thrown.
  * <p>
  * This system of configuring <code>RuleBasedCollator</code> is needlessly
  * complex and the people at Taligent who developed it (along with the folks
@@ -100,7 +100,7 @@ import java.util.HashMap;
  * <p>
  * Here are a couple of example of rule strings:
  * <p>
- * "&lt; a &lt; b &lt; c" - This string says that a is greater than b which is 
+ * "&lt; a &lt; b &lt; c" - This string says that a is greater than b which is
  * greater than c, with all differences being primary differences.
  * <p>
  * "&lt; a,A &lt; b,B &lt; c,C" - This string says that 'A' is greater than 'a' with
@@ -108,7 +108,7 @@ import java.util.HashMap;
  * 'A' during a primary strength comparison.  But 'B' is greater than 'b'
  * under a tertiary strength comparison.
  * <p>
- * "&lt; a &lt; c &amp; a &lt; b " - This sequence is identical in function to the 
+ * "&lt; a &lt; c &amp; a &lt; b " - This sequence is identical in function to the
  * "&lt; a &lt; b &lt; c" rule string above.  The '&amp;' reset symbol indicates that
  * the rule "&lt; b" is to be inserted after the text argument "a" in the
  * previous rule string segment.
@@ -125,7 +125,7 @@ import java.util.HashMap;
  * <p>
  * As an additional complication to this already overly complex rule scheme,
  * if any characters precede the first rule, these characters are considered
- * ignorable.  They will be treated as if they did not exist during 
+ * ignorable.  They will be treated as if they did not exist during
  * comparisons.  For example, "- &lt; a &lt; b ..." would make '-' an ignorable
  * character such that the strings "high-tech" and "hightech" would
  * be considered identical.
@@ -146,21 +146,21 @@ import java.util.HashMap;
 public class RuleBasedCollator extends Collator
 {
   /**
-   * This class describes what rank has a character (or a sequence of characters) 
+   * This class describes what rank has a character (or a sequence of characters)
    * in the lexicographic order. Each element in a rule has a collation element.
    */
   static final class CollationElement
   {
-    String key;
-    int primary;
-    short secondary;
-    short tertiary;
-    short equality;
-    boolean ignore;
-    String expansion;
+    final String key;
+    final int primary;
+    final short secondary;
+    final short tertiary;
+    final short equality;
+    final boolean ignore;
+    final String expansion;
 
     CollationElement(String key, int primary, short secondary, short tertiary,
-		     short equality, String expansion, boolean ignore)
+                     short equality, String expansion, boolean ignore)
     {
       this.key = key;
       this.primary = primary;
@@ -185,7 +185,7 @@ public class RuleBasedCollator extends Collator
    * {@link #mergeRules(int,java.lang.String,java.util.ArrayList,java.util.ArrayList)})
    * as a temporary state while merging two sets of instructions.
    */
-  static final class CollationSorter
+  private static final class CollationSorter
   {
     static final int GREATERP = 0;
     static final int GREATERS = 1;
@@ -193,30 +193,40 @@ public class RuleBasedCollator extends Collator
     static final int EQUAL = 3;
     static final int RESET = 4;
     static final int INVERSE_SECONDARY = 5;
-    
-    int comparisonType;
-    String textElement;
-    int hashText;
-    int offset;
-    boolean ignore;
+
+    final int comparisonType;
+    final String textElement;
+    final int hashText;
+    final int offset;
+    final boolean ignore;
 
     String expansionOrdering;
+
+    private CollationSorter(final int comparisonType, final String textElement,
+                            final int offset, final boolean ignore)
+    {
+      this.comparisonType = comparisonType;
+      this.textElement = textElement;
+      this.offset = offset;
+      this.ignore = ignore;
+      hashText = textElement.hashCode();
+    }
   }
 
   /**
-   * This the the original rule string.
+   * This is the original rule string.
    */
   private String rules;
 
   /**
    * This is the table of collation element values
    */
-  private Object[] ce_table;
+  private CollationElement[] ce_table;
 
   /**
    * Quick-prefix finder.
    */
-  HashMap prefix_tree;
+  HashMap<String,CollationElement> prefix_tree;
 
   /**
    * This is the value of the last sequence entered into
@@ -244,10 +254,10 @@ public class RuleBasedCollator extends Collator
    * The JDK uses it to mark and sort the characters which has
    * no collation rules.
    */
-  static final CollationElement SPECIAL_UNKNOWN_SEQ = 
+  static final CollationElement SPECIAL_UNKNOWN_SEQ =
     new CollationElement("", (short) 32767, (short) 0, (short) 0,
-			 (short) 0, null, false);
-  
+                         (short) 0, null, false);
+
   /**
    * This method initializes a new instance of <code>RuleBasedCollator</code>
    * with the specified collation rules.  Note that an application normally
@@ -263,7 +273,7 @@ public class RuleBasedCollator extends Collator
   {
     if (rules.equals(""))
       throw new ParseException("empty rule set", 0);
-    
+
     this.rules = rules;
 
     buildCollationVector(parseString(rules));
@@ -286,8 +296,8 @@ public class RuleBasedCollator extends Collator
 
     for (index = 0; index < len && index < s.length(); ++index)
       {
-	if (prefix.charAt(index) != s.charAt(index))
-	  return index;
+        if (prefix.charAt(index) != s.charAt(index))
+          return index;
       }
 
 
@@ -306,45 +316,46 @@ public class RuleBasedCollator extends Collator
    * @param patch Rules to be merged into the repository.
    * @throws ParseException if it is impossible to find an anchor point for the new rules.
    */
-  private void mergeRules(int offset, String starter, ArrayList main, ArrayList patch)
-    throws ParseException 
+  private void mergeRules(int offset, String starter, ArrayList<CollationSorter> main,
+                          ArrayList<CollationSorter> patch)
+    throws ParseException
   {
     int insertion_point = -1;
     int max_length = 0;
-    
+
     /* We must check that no rules conflict with another already present. If it
-     * is the case delete the old rule. 
+     * is the case delete the old rule.
      */
-    
+
     /* For the moment good old O(N^2) algorithm.
      */
     for (int i = 0; i < patch.size(); i++)
       {
-	int j = 0;
-	
-	while (j < main.size())
-	  {
-	    CollationSorter rule1 = (CollationSorter) patch.get(i);
-	    CollationSorter rule2 = (CollationSorter) main.get(j);
-	    
-	    if (rule1.textElement.equals(rule2.textElement))
-	      main.remove(j);
-	    else
-	      j++;
-	  }
+        int j = 0;
+
+        while (j < main.size())
+          {
+            CollationSorter rule1 = patch.get(i);
+            CollationSorter rule2 = main.get(j);
+
+            if (rule1.textElement.equals(rule2.textElement))
+              main.remove(j);
+            else
+              j++;
+          }
       }
 
     // Find the insertion point... O(N)
     for (int i = 0; i < main.size(); i++)
       {
-	CollationSorter sorter = (CollationSorter) main.get(i);
-	int length = findPrefixLength(starter, sorter.textElement);
-		
-	if (length > max_length)
-	  {
-	    max_length = length;
-	    insertion_point = i+1;
-	  }
+        CollationSorter sorter = main.get(i);
+        int length = findPrefixLength(starter, sorter.textElement);
+
+        if (length > max_length)
+          {
+            max_length = length;
+            insertion_point = i+1;
+          }
       }
 
     if (insertion_point < 0)
@@ -352,30 +363,28 @@ public class RuleBasedCollator extends Collator
 
     if (max_length < starter.length())
       {
-	/*
-	 * We need to expand the first entry. It must be sorted
-	 * like if it was the reference key itself (like the spec
-	 * said. So the first entry is special: the element is
-	 * replaced by the specified text element for the sorting.
-	 * This text replace the old one for comparisons. However
-	 * to preserve the behaviour we replace the first key (corresponding
-	 * to the found prefix) by a new code rightly ordered in the
-	 * sequence. The rest of the subsequence must be appended
-	 * to the end of the sequence.
-	 */
-	CollationSorter sorter = (CollationSorter) patch.get(0);
-	CollationSorter expansionPrefix =
-	  (CollationSorter) main.get(insertion_point-1);
-	
-	sorter.expansionOrdering = starter.substring(max_length); // Skip the first good prefix element
-		
-	main.add(insertion_point, sorter);
-	
-	/*
-	 * This is a new set of rules. Append to the list.
-	 */
-	patch.remove(0);
-	insertion_point++;
+        /*
+         * We need to expand the first entry. It must be sorted
+         * like if it was the reference key itself (like the spec
+         * said. So the first entry is special: the element is
+         * replaced by the specified text element for the sorting.
+         * This text replace the old one for comparisons. However
+         * to preserve the behaviour we replace the first key (corresponding
+         * to the found prefix) by a new code rightly ordered in the
+         * sequence. The rest of the subsequence must be appended
+         * to the end of the sequence.
+         */
+        CollationSorter sorter = patch.get(0);
+
+        sorter.expansionOrdering = starter.substring(max_length); // Skip the first good prefix element
+
+        main.add(insertion_point, sorter);
+
+        /*
+         * This is a new set of rules. Append to the list.
+         */
+        patch.remove(0);
+        insertion_point++;
       }
 
     // Now insert all elements of patch at the insertion point.
@@ -386,7 +395,7 @@ public class RuleBasedCollator extends Collator
   /**
    * This method parses a string and build a set of sorting instructions. The parsing
    * may only be partial on the case the rules are to be merged sometime later.
-   * 
+   *
    * @param stop_on_reset If this parameter is true then the parser stops when it
    * encounters a reset instruction. In the other case, it tries to parse the subrules
    * and merged it in the same repository.
@@ -394,179 +403,171 @@ public class RuleBasedCollator extends Collator
    * @param base_offset Offset in the string to begin parsing.
    * @param rules Rules to be parsed.
    * @return -1 if the parser reached the end of the string, an integer representing the
-   * offset in the string at which it stopped parsing. 
+   * offset in the string at which it stopped parsing.
    * @throws ParseException if something turned wrong during the parsing. To get details
    * decode the message.
    */
-  private int subParseString(boolean stop_on_reset, ArrayList v,
-			     int base_offset, String rules)
+  private int subParseString(boolean stop_on_reset, ArrayList<CollationSorter> v,
+                             int base_offset, String rules)
     throws ParseException
   {
     boolean ignoreChars = (base_offset == 0);
     int operator = -1;
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     boolean doubleQuote = false;
     boolean eatingChars = false;
     boolean nextIsModifier = false;
     boolean isModifier = false;
     int i;
-    
+
 main_parse_loop:
     for (i = 0; i < rules.length(); i++)
       {
-	char c = rules.charAt(i);
-	int type = -1;
-	
-	if (!eatingChars &&
-	    ((c >= 0x09 && c <= 0x0D) || (c == 0x20)))
-	      continue;
+        char c = rules.charAt(i);
+        int type = -1;
 
-	isModifier = nextIsModifier;
-	nextIsModifier = false;
+        if (!eatingChars &&
+            ((c >= 0x09 && c <= 0x0D) || (c == 0x20)))
+              continue;
 
-	if (eatingChars && c != '\'')
-	  {
-	    doubleQuote = false;
-	    sb.append(c);
-	    continue;
-	  }
-	if (doubleQuote && eatingChars)
-	  {
-	    sb.append(c);
-	    doubleQuote = false;
-	    continue;
-	  }
+        isModifier = nextIsModifier;
+        nextIsModifier = false;
 
-	switch (c)
-	  {
-	  case '!':
-	    throw new ParseException
-	      ("Modifier '!' is not yet supported by Classpath", i + base_offset);
-	  case '<':
-	    type = CollationSorter.GREATERP;
-	    break;
-	  case ';':
-	    type = CollationSorter.GREATERS;
-	    break;
-	  case ',':
-	    type = CollationSorter.GREATERT;
-	    break;
-	  case '=':
-	    type = CollationSorter.EQUAL;
-	    break;
-	  case '\'':
-	    eatingChars = !eatingChars;
-	    doubleQuote = true;
-	    break;
-	  case '@':
-	    if (ignoreChars)
-	      throw new ParseException
-		("comparison list has not yet been started. You may only use"
-		 + "(<,;=&)", i + base_offset);
-	    // Inverse the order of secondaries from now on.
-	    nextIsModifier = true;
-	    type = CollationSorter.INVERSE_SECONDARY;
-	    break;
-	  case '&':
-	    type = CollationSorter.RESET;
-	    if (stop_on_reset)
-	      break main_parse_loop;
-	    break;
-	  default:
-	    if (operator < 0)
-	      throw new ParseException
-		("operator missing at " + (i + base_offset), i + base_offset);
-	    if (! eatingChars
-		&& ((c >= 0x21 && c <= 0x2F) 
-		    || (c >= 0x3A && c <= 0x40)
-		    || (c >= 0x5B && c <= 0x60)
-		    || (c >= 0x7B && c <= 0x7E)))
-	      throw new ParseException
-		("unquoted punctuation character '" + c + "'", i + base_offset);
+        if (eatingChars && c != '\'')
+          {
+            doubleQuote = false;
+            sb.append(c);
+            continue;
+          }
+        if (doubleQuote && eatingChars)
+          {
+            sb.append(c);
+            doubleQuote = false;
+            continue;
+          }
 
-	    //type = ignoreChars ? CollationSorter.IGNORE : -1;
-	    sb.append(c);
-	    break;
-	  }
+        switch (c)
+          {
+          case '!':
+            throw new ParseException
+              ("Modifier '!' is not yet supported by Classpath", i + base_offset);
+          case '<':
+            type = CollationSorter.GREATERP;
+            break;
+          case ';':
+            type = CollationSorter.GREATERS;
+            break;
+          case ',':
+            type = CollationSorter.GREATERT;
+            break;
+          case '=':
+            type = CollationSorter.EQUAL;
+            break;
+          case '\'':
+            eatingChars = !eatingChars;
+            doubleQuote = true;
+            break;
+          case '@':
+            if (ignoreChars)
+              throw new ParseException
+                ("comparison list has not yet been started. You may only use"
+                 + "(<,;=&)", i + base_offset);
+            // Inverse the order of secondaries from now on.
+            nextIsModifier = true;
+            type = CollationSorter.INVERSE_SECONDARY;
+            break;
+          case '&':
+            type = CollationSorter.RESET;
+            if (stop_on_reset)
+              break main_parse_loop;
+            break;
+          default:
+            if (operator < 0)
+              throw new ParseException
+                ("operator missing at " + (i + base_offset), i + base_offset);
+            if (! eatingChars
+                && ((c >= 0x21 && c <= 0x2F)
+                    || (c >= 0x3A && c <= 0x40)
+                    || (c >= 0x5B && c <= 0x60)
+                    || (c >= 0x7B && c <= 0x7E)))
+              throw new ParseException
+                ("unquoted punctuation character '" + c + "'", i + base_offset);
 
-	if (type  < 0)
-	  continue;
+            //type = ignoreChars ? CollationSorter.IGNORE : -1;
+            sb.append(c);
+            break;
+          }
 
-	if (operator < 0)
-	  {
-	    operator = type;
-	    continue;
-	  }
+        if (type  < 0)
+          continue;
 
-	if (sb.length() == 0 && !isModifier)
-	  throw new ParseException
-	    ("text element empty at " + (i+base_offset), i+base_offset);
+        if (operator < 0)
+          {
+            operator = type;
+            continue;
+          }
 
-	if (operator == CollationSorter.RESET)
-	  {
-	    /* Reposition in the sorting list at the position
-	     * indicated by the text element.
-	     */
-	    String subrules = rules.substring(i);
-	    ArrayList sorted_rules = new ArrayList();
-	    int idx;
+        if (sb.length() == 0 && !isModifier)
+          throw new ParseException
+            ("text element empty at " + (i+base_offset), i+base_offset);
 
-	    // Parse the subrules but do not iterate through all
-	    // sublist. This is the privilege of the first call.
-	    idx = subParseString(true, sorted_rules, base_offset+i, subrules);
-    
-	    // Merge new parsed rules into the list.
-	    mergeRules(base_offset+i, sb.toString(), v, sorted_rules);
-	    sb.setLength(0);
-	    
-	    // Reset state to none.
-	    operator = -1;
-	    type = -1;
-	    // We have found a new subrule at 'idx' but it has not been parsed.
-	    if (idx >= 0)
-	      {
-		i += idx-1;
-		continue main_parse_loop;
-	      }
-	    else
-		// No more rules.
-		break main_parse_loop;
-	  }
+        if (operator == CollationSorter.RESET)
+          {
+            /* Reposition in the sorting list at the position
+             * indicated by the text element.
+             */
+            String subrules = rules.substring(i);
+            ArrayList<CollationSorter> sorted_rules = new ArrayList<CollationSorter>();
+            int idx;
 
-	CollationSorter sorter = new CollationSorter();
-	
-	if (operator == CollationSorter.GREATERP)
-	  ignoreChars = false;
+            // Parse the subrules but do not iterate through all
+            // sublist. This is the privilege of the first call.
+            idx = subParseString(true, sorted_rules, base_offset+i, subrules);
 
-	sorter.comparisonType = operator;
-	sorter.textElement = sb.toString();
-	sorter.hashText = sorter.textElement.hashCode();
-	sorter.offset = base_offset+rules.length();
-	sorter.ignore = ignoreChars;
-	sb.setLength(0);
+            // Merge new parsed rules into the list.
+            mergeRules(base_offset+i, sb.toString(), v, sorted_rules);
+            sb.setLength(0);
 
-	v.add(sorter);
-	operator = type;
+            // Reset state to none.
+            operator = -1;
+            type = -1;
+            // We have found a new subrule at 'idx' but it has not been parsed.
+            if (idx >= 0)
+              {
+                i += idx-1;
+                continue main_parse_loop;
+              }
+            else
+                // No more rules.
+                break main_parse_loop;
+          }
+
+        String textElement = sb.toString();
+        if (operator == CollationSorter.GREATERP)
+          ignoreChars = false;
+        CollationSorter sorter = new CollationSorter(operator, textElement,
+                                                     base_offset + rules.length(),
+                                                     ignoreChars);
+        sb.setLength(0);
+
+        v.add(sorter);
+        operator = type;
       }
 
     if (operator >= 0)
       {
-	CollationSorter sorter = new CollationSorter();
-	int pos = rules.length() + base_offset;
+        int pos = rules.length() + base_offset;
 
-	if ((sb.length() != 0 && nextIsModifier)
-	    || (sb.length() == 0 && !nextIsModifier && !eatingChars))
-	  throw new ParseException("text element empty at " + pos, pos);
+        if ((sb.length() != 0 && nextIsModifier)
+            || (sb.length() == 0 && !nextIsModifier && !eatingChars))
+          throw new ParseException("text element empty at " + pos, pos);
 
-	if (operator == CollationSorter.GREATERP)
-	  ignoreChars = false;
+        if (operator == CollationSorter.GREATERP)
+          ignoreChars = false;
 
-	sorter.comparisonType = operator;
-	sorter.textElement = sb.toString();
- 	sorter.hashText = sorter.textElement.hashCode();
-	sorter.offset = base_offset+pos;
-	sorter.ignore = ignoreChars;
-	v.add(sorter);
+        CollationSorter sorter = new CollationSorter(operator, sb.toString(),
+                                                     base_offset+pos, ignoreChars);
+        v.add(sorter);
       }
 
     if (i == rules.length())
@@ -588,20 +589,20 @@ main_parse_loop:
   /**
    * This method completely parses a string 'rules' containing sorting rules.
    *
-   * @param rules String containing the rules to be parsed. 
+   * @param rules String containing the rules to be parsed.
    * @return A set of sorting instructions stored in a Vector.
    * @throws ParseException if something turned wrong during the parsing. To get details
    * decode the message.
    */
-  private ArrayList parseString(String rules) 
+  private ArrayList<CollationSorter> parseString(String rules)
     throws ParseException
   {
-    ArrayList v = new ArrayList();
+    ArrayList<CollationSorter> v = new ArrayList<CollationSorter>();
 
     // result of the first subParseString is not absolute (may be -1 or a
     // positive integer). But we do not care.
     subParseString(false, v, 0, rules);
-    
+
     return v;
   }
 
@@ -612,7 +613,7 @@ main_parse_loop:
    * @param parsedElements Parsed instructions stored in a ArrayList.
    * @throws ParseException if the order of the instructions are not valid.
    */
-  private void buildCollationVector(ArrayList parsedElements)
+  private void buildCollationVector(ArrayList<CollationSorter> parsedElements)
     throws ParseException
   {
     int primary_seq = 0;
@@ -624,69 +625,68 @@ main_parse_loop:
     final boolean DECREASING = false;
     final boolean INCREASING = true;
     boolean secondaryType = INCREASING;
-    ArrayList v = new ArrayList();
+    ArrayList<CollationElement> v = new ArrayList<CollationElement>();
 
     // elts is completely sorted.
 element_loop:
     for (int i = 0; i < parsedElements.size(); i++)
       {
-	CollationSorter elt = (CollationSorter) parsedElements.get(i);
-	boolean ignoreChar = false;
+        CollationSorter elt = parsedElements.get(i);
 
-	switch (elt.comparisonType)
-	  {
-	  case CollationSorter.GREATERP:
-	    primary_seq++;
-	    if (inverseComparisons)
-	      {
-		secondary_seq = Short.MAX_VALUE;
-		secondaryType = DECREASING;
-	      }
-	    else
-	      {
-		secondary_seq = 0;
-		secondaryType = INCREASING;
-	      }
-	    tertiary_seq = 0;
-	    equality_seq = 0;
-	    inverseComparisons = false;
-	    break;
-	  case CollationSorter.GREATERS:
-	    if (secondaryType == DECREASING)
-	      secondary_seq--;
-	    else
-	      secondary_seq++;
-	    tertiary_seq = 0;
-	    equality_seq = 0;
-	    break;
-	  case CollationSorter.INVERSE_SECONDARY:
-	    inverseComparisons = true;
-	    continue element_loop;
-	  case CollationSorter.GREATERT:
-	    tertiary_seq++;
-	    if (primary_seq == 0)
-	      last_tertiary_seq = tertiary_seq;
-	    equality_seq = 0;
-	    break;
-	  case CollationSorter.EQUAL:
-	    equality_seq++;
-	    break;
-	  case CollationSorter.RESET:
-	    throw new ParseException
-	      ("Invalid reached state 'RESET'. Internal error", elt.offset);
-	  default:
-	    throw new ParseException
-	      ("Invalid unknown state '" + elt.comparisonType + "'", elt.offset);
-	  }
+        switch (elt.comparisonType)
+          {
+          case CollationSorter.GREATERP:
+            primary_seq++;
+            if (inverseComparisons)
+              {
+                secondary_seq = Short.MAX_VALUE;
+                secondaryType = DECREASING;
+              }
+            else
+              {
+                secondary_seq = 0;
+                secondaryType = INCREASING;
+              }
+            tertiary_seq = 0;
+            equality_seq = 0;
+            inverseComparisons = false;
+            break;
+          case CollationSorter.GREATERS:
+            if (secondaryType == DECREASING)
+              secondary_seq--;
+            else
+              secondary_seq++;
+            tertiary_seq = 0;
+            equality_seq = 0;
+            break;
+          case CollationSorter.INVERSE_SECONDARY:
+            inverseComparisons = true;
+            continue element_loop;
+          case CollationSorter.GREATERT:
+            tertiary_seq++;
+            if (primary_seq == 0)
+              last_tertiary_seq = tertiary_seq;
+            equality_seq = 0;
+            break;
+          case CollationSorter.EQUAL:
+            equality_seq++;
+            break;
+          case CollationSorter.RESET:
+            throw new ParseException
+              ("Invalid reached state 'RESET'. Internal error", elt.offset);
+          default:
+            throw new ParseException
+              ("Invalid unknown state '" + elt.comparisonType + "'", elt.offset);
+          }
 
-	v.add(new CollationElement(elt.textElement, primary_seq,
-				   secondary_seq, tertiary_seq,
-				   equality_seq, elt.expansionOrdering, elt.ignore));
+        v.add(new CollationElement(elt.textElement, primary_seq,
+                                   secondary_seq, tertiary_seq,
+                                   equality_seq, elt.expansionOrdering, elt.ignore));
       }
 
-    this.inverseAccentComparison = inverseComparisons; 
+    this.inverseAccentComparison = inverseComparisons;
 
-    ce_table = v.toArray();
+    ce_table = v.toArray(new CollationElement[v.size()]);
 
     last_primary_value = primary_seq+1;
     last_tertiary_value = last_tertiary_seq+1;
@@ -699,13 +699,13 @@ element_loop:
    */
   private void buildPrefixAccess()
   {
-    prefix_tree = new HashMap();
+    prefix_tree = new HashMap<String,CollationElement>();
 
     for (int i = 0; i < ce_table.length; i++)
       {
-	CollationElement e = (CollationElement) ce_table[i];
+        CollationElement e = ce_table[i];
 
-	prefix_tree.put(e.key, e);
+        prefix_tree.put(e.key, e);
       }
   }
 
@@ -734,72 +734,72 @@ element_loop:
 
     for(;;)
       {
-	int ord1;
-	int ord2;
+        int ord1;
+        int ord2;
 
-	/*
-	 * We have to check whether the characters are ignorable.
-	 * If it is the case then forget them. 
-	 */
-	if (advance_block_1)
-	  {
-	    ord1block = cs.nextBlock();
-	    if (ord1block != null && ord1block.ignore)
-	      continue;
-	  }
-	
-	if (advance_block_2)
-	  {
-	    ord2block = ct.nextBlock();
-	    if (ord2block != null && ord2block.ignore)
-	      {
-	        advance_block_1 = false;
-	        continue;
-	      }
-	 }
-	else
-	  advance_block_2 = true;
+        /*
+         * We have to check whether the characters are ignorable.
+         * If it is the case then forget them.
+         */
+        if (advance_block_1)
+          {
+            ord1block = cs.nextBlock();
+            if (ord1block != null && ord1block.ignore)
+              continue;
+          }
 
-	if (!advance_block_1)
-	  advance_block_1 = true;
+        if (advance_block_2)
+          {
+            ord2block = ct.nextBlock();
+            if (ord2block != null && ord2block.ignore)
+              {
+                advance_block_1 = false;
+                continue;
+              }
+         }
+        else
+          advance_block_2 = true;
 
-	if (ord1block != null)
-	  ord1 = ord1block.getValue();
-	else
-	  {
-	    if (ord2block == null)
-	      return 0;
-	    return -1;
-	  }
+        if (!advance_block_1)
+          advance_block_1 = true;
 
-	if (ord2block == null)
-	  return 1;
-	
-	ord2 = ord2block.getValue();
-	
-	// We know chars are totally equal, so skip
+        if (ord1block != null)
+          ord1 = ord1block.getValue();
+        else
+          {
+            if (ord2block == null)
+              return 0;
+            return -1;
+          }
+
+        if (ord2block == null)
+          return 1;
+
+        ord2 = ord2block.getValue();
+
+        // We know chars are totally equal, so skip
         if (ord1 == ord2)
-	  {
-	    if (getStrength() == IDENTICAL)
-	      if (!ord1block.key.equals(ord2block.key))
-		return ord1block.key.compareTo(ord2block.key);
-	    continue;
-	  }
+          {
+            if (getStrength() == IDENTICAL)
+              if (!ord1block.key.equals(ord2block.key))
+                return ord1block.key.compareTo(ord2block.key);
+            continue;
+          }
 
         // Check for primary strength differences
-        int prim1 = CollationElementIterator.primaryOrder(ord1); 
-        int prim2 = CollationElementIterator.primaryOrder(ord2); 
-	
-	if (prim1 == 0 && getStrength() < TERTIARY)
-	  {
+        int prim1 = CollationElementIterator.primaryOrder(ord1);
+        int prim2 = CollationElementIterator.primaryOrder(ord2);
+
+        if (prim1 == 0 && getStrength() < TERTIARY)
+          {
             advance_block_2 = false;
-	    continue;
-	  }
-	else if (prim2 == 0 && getStrength() < TERTIARY)
-	  {
-	    advance_block_1 = false;
-	    continue;
-	  }
+            continue;
+          }
+        else if (prim2 == 0 && getStrength() < TERTIARY)
+          {
+            advance_block_1 = false;
+            continue;
+          }
 
         if (prim1 < prim2)
           return -1;
@@ -812,7 +812,7 @@ element_loop:
         int sec1 = CollationElementIterator.secondaryOrder(ord1);
         int sec2 = CollationElementIterator.secondaryOrder(ord2);
 
-	if (sec1 < sec2)
+        if (sec1 < sec2)
           return -1;
         else if (sec1 > sec2)
           return 1;
@@ -827,16 +827,16 @@ element_loop:
           return -1;
         else if (tert1 > tert2)
           return 1;
-	else if (getStrength() == TERTIARY)
-	  continue;
+        else if (getStrength() == TERTIARY)
+          continue;
 
-	// Apparently JDK does this (at least for my test case).
-	return ord1block.key.compareTo(ord2block.key);    
+        // Apparently JDK does this (at least for my test case).
+        return ord1block.key.compareTo(ord2block.key);
       }
   }
 
   /**
-   * This method tests this object for equality against the specified 
+   * This method tests this object for equality against the specified
    * object.  This will be true if and only if the specified object is
    * another reference to this object.
    *
@@ -872,7 +872,7 @@ element_loop:
     else
       v = (short) c;
     return new CollationElement("" + c, last_primary_value + v,
-				(short) 0, (short) 0, (short) 0, null, false);
+                                (short) 0, (short) 0, (short) 0, null, false);
   }
 
   /**
@@ -894,7 +894,7 @@ element_loop:
     else
       v = (short) c;
     return new CollationElement("" + c, (short) 0,
-				(short) 0, (short) (last_tertiary_value + v), (short) 0, null, false);
+                                (short) 0, (short) (last_tertiary_value + v), (short) 0, null, false);
   }
 
   /**
@@ -923,17 +923,8 @@ element_loop:
    * @return A <code>CollationElementIterator</code> for the specified <code>String</code>.
    */
   public CollationElementIterator getCollationElementIterator(CharacterIterator source)
-    throws NotImplementedException  // Because decomposeCharacter does not work
   {
-    StringBuffer expand = new StringBuffer("");
-    
-    // Right now we assume that we will read from the beginning of the string.
-    for (char c = source.first();
-	 c != CharacterIterator.DONE;
-	 c = source.next())
-      decomposeCharacter(c, expand);
-
-    return getCollationElementIterator(expand.toString());
+    return new CollationElementIterator(this, source);
   }
 
   /**
@@ -950,44 +941,44 @@ element_loop:
   public CollationKey getCollationKey(String source)
   {
     CollationElementIterator cei = getCollationElementIterator(source);
-    ArrayList vect = new ArrayList();
+    ArrayList<Integer> vect = new ArrayList<Integer>();
 
     int ord = cei.next();
     cei.reset(); //set to start of string
 
     while (ord != CollationElementIterator.NULLORDER)
       {
-	// If the primary order is null, it means this is an ignorable
-	// character.
-	if (CollationElementIterator.primaryOrder(ord) == 0)
-	  {
+        // If the primary order is null, it means this is an ignorable
+        // character.
+        if (CollationElementIterator.primaryOrder(ord) == 0)
+          {
             ord = cei.next();
-	    continue;
-	  }
+            continue;
+          }
         switch (getStrength())
           {
             case PRIMARY:
-	      ord = CollationElementIterator.primaryOrder(ord);
-	      break;
-	      
+              ord = CollationElementIterator.primaryOrder(ord);
+              break;
+
             case SECONDARY:
-	      ord = CollationElementIterator.primaryOrder(ord) << 8;
-	      ord |= CollationElementIterator.secondaryOrder(ord);
+              ord = CollationElementIterator.primaryOrder(ord) << 8;
+              ord |= CollationElementIterator.secondaryOrder(ord);
 
             default:
                break;
           }
 
-        vect.add(new Integer(ord)); 
-	ord = cei.next(); //increment to next key
+        vect.add(Integer.valueOf(ord));
+        ord = cei.next(); //increment to next key
       }
 
-    Object[] objarr = vect.toArray();
+    Integer[] objarr = vect.toArray(new Integer[vect.size()]);
     byte[] key = new byte[objarr.length * 4];
 
     for (int i = 0; i < objarr.length; i++)
       {
-        int j = ((Integer) objarr[i]).intValue();
+        int j = objarr[i].intValue();
         key [i * 4] = (byte) ((j & 0xFF000000) >> 24);
         key [i * 4 + 1] = (byte) ((j & 0x00FF0000) >> 16);
         key [i * 4 + 2] = (byte) ((j & 0x0000FF00) >> 8);
